# C-How-To-Program

./: README.md
ch06-Arrays/examples/: CMakeLists.txt
ch06-Arrays/examples/src/: fig06_05.c
ch12-Data-Structures/linkedLists/include/: list.h
ch12-Data-Structures/linkedLists/src/: list.c  main.c
